Fixed events div alignment on homepage

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -18,7 +18,7 @@
   align-items: center;
   position: fixed;
   top: 47%;
-  margin-top: 100px;
+  margin-top: 220px;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 55px;
